istio_demo/k8s/ProductDetailMx-Service-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myshop-productdetail-depl
  #namespace: demo    
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myshop-productdetail
  template:
    metadata:
      labels:
        app: myshop-productdetail
    spec:
      containers:
        - name: myshop-productdetail
          image: arun6783/myshop-productdetail:grpc
          volumeMounts:
            - name: config-volume
              mountPath: /protos/
      volumes:
        - name: config-volume
          configMap:
            name: myshop.proto
---
kind: Service
apiVersion: v1
metadata:
  name: myshop-productdetail-srv
  #namespace: demo    
spec:
  selector:
    app: myshop-productdetail
  ports:
    - name: grpc
      port: 5500
      targetPort: 5500
  #type: LoadBalancer
