istio_demo/k8s/ProductOrchestrator-Service.depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myshop-orchestrator-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myshop-orchestrator
  template:
    metadata:
      labels:
        app: myshop-orchestrator
    spec:
      containers:
        - name: myshop-orchestrator
          image: arun6783/myshop-orchestrator:grpc
          volumeMounts:
            - name: config-volume
              mountPath: /protos/
      volumes:
        - name: config-volume
          configMap:
            name: myshop.proto
---
kind: Service
apiVersion: v1
metadata:
  name: myshop-orchestrator-srv
spec:
  selector:
    app: myshop-orchestrator
  ports:
    - name: http
      port: 6000
      targetPort: 6000
  type: LoadBalancer
