istio_demo/k8s/StockMx-Service-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myshop-stock-depl
  #namespace: demo    
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myshop-stock
  template:
    metadata:
      labels:
        app: myshop-stock
    spec:
      containers:
        - name: myshop-stock
          image: arun6783/myshop-stock:grpc
          volumeMounts:
            - name: config-volume
              mountPath: /protos/
      volumes:
        - name: config-volume
          configMap:
            name: myshop.proto
---
kind: Service
apiVersion: v1
metadata:
  name: myshop-stock-srv
  #namespace: demo    
spec:
  selector:
    app: myshop-stock
  ports:
    - name: grpc
      port: 4100
      targetPort: 4100
  type: LoadBalancer
