istio_demo/k8s/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dune-quote-service
  annotations:
    konghq.com/protocols: grpc
    kubernetes.io/ingress.class: kong
spec:
  rules:
    - host: myshop.local
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: myshop-reviews-srv
                port:
                  number: 4600
