istio_demo/k8s/auth-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: "require-jwt-policy"
spec:
  selector:
    matchLabels:
      app: myshop-orchestrator
  action: ALLOW
  rules:
  - from:
    - source:
        requestPrincipals: ["*"]
